--- a/flex2/index8.html
+++ b/flex2/index8.html
@@ -17,7 +17,7 @@
         <li class="item">Подготовка</li>
         <li class="item">Консультация с активом</li>
         <li class="item">Повседневная практика</li>
-        <li class="item">Помощь экспертов</li>
+        <li class="item">Результат</li>
       </ul>
     </div>
   </body>
